Add support for multiple statements
This commit also introduces a new field modification_query which allows
multiple queries to be run after executing the user-submitted query

--- a/sql_grader/templates/view.html
+++ b/sql_grader/templates/view.html
@@ -61,6 +61,11 @@
         {% if verify_query %}
         <div class="sql_verify_query">
           {% trans 'To check your data modification statement, we ran the following query after your modification:' %}
+          {% if modification_query %}
+          <pre>
+            {{ modification_query }}
+          </pre>
+          {% endif %}
           <pre>
             {{ verify_query }}
           </pre>
